@@ -1,3 +1,9 @@
+2013-01-08  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mmg: new feature: Command line options can be saved as default
+        for new jobs by clicking a check box in the "add command line
+        options" dialog.
+
 2013-01-02  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: bug fix: Fixed a crash in the chapter editor if the root
